* If a driver returns invalid MAC address (00:00:00:00:00) when
  queried with OID_802_3_CURRENT_ADDRESS (probably because
  NdisReadNetworkAddress returns NDIS_STATUS_FAILURE?), use
  OID_802_3_PERMANENT_ADDRESS to get the correct address. This is required for
  some atheros devices (e.g., AR5007EG)
* Fixed a kernel crash with non-preempt kernels (observed with acx111 driver)

Version 1.48 2007-09-19
=======================	
* Support for 2.6.23 kernel
* Disassocation with wpa_supplicant is fixed (earlier, after disassociation,
  the driver and ndiswrapper would be configured differently, requiring
  unloading and reloading of ndiswrapper module)
* (Re)Association / (Re)Authentication issues with wpa_supplicant with
  2.6.23 kernels fixed
* Fixed an issue with 64-bit Broadcom drivers that cause ntos_wq worker thread
  to take up all the CPU in some cases

Version 1.47 2007-06-12
=======================	
* Fixed random (occassional) crash issues with 64-bit drivers (observed with
  Broadcom driver)
* Fixed compilation issues with version 1.46

Version 1.46 2007-06-03
=======================	
* Fixed crash with large transfers (bug in version 1.45)

Version 1.45 2007-05-28
=======================	
* Fixes 'NOHZ: local_softirq_pending: 08' warnings from tickless
  kernels
* Fixed issue(s) with RT-preempt enabled kernels
* Fixed ndiswrapper script to handle installation of Intel 4965AGN
  driver (which apparently works with ndiswrapper)
* Fixed a warning when SLUB allocator is used
* Fixed kernel crash with PsCreateSystemThread that manifested with
  sis163u when preempt is enabled
* Changing MAC address with 'ifconfig <iface> hw ether' should work
  with all drivers now. If MAC address should be changed everytime
  ndiswrapper is loaded, change 'NetworkAddress' setting, as explained
  in wiki entry 'Tips' (earlier 'mac_address' setting was used, but
  that no longer applies)
* Fixed an issue with some drivers (e.g., sis163u) that would stall